# Chess-of-UCAS

./: CMakeLists.txt  readme.md  棋子.txt
.cache/clangd/index/: chessGame.cpp.55049EFCF3193F73.idx  chessGame.hpp.51A8E2AEBA2E98AC.idx  main.cpp.463CE95AF6A80D7C.idx
include/: chessGame.hpp  decisionTree.hpp
source/: chessGame.cpp  decisionTree.cpp  main.cpp
